mType/tests/testFiles/import/error/importNonExistent.mt
// Test: Import from non-existent file
import { NonExistentClass } from "./this/file/does/not/exist.mt"

var obj = NonExistentClass();
